add base name to router

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://olehlavryk.github.io/cocktails-cafe",
+  "homepage": "https://olehlavryk.github.io/cocktails-cafe",
   "name": "final",
   "version": "0.1.0",
   "private": true,
